# CodexMeter

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  admin.md  convert_icon.py  doctor.sh  flash.sh  install.sh  package-lock.json  pyproject.toml  requirements.txt  screenshot.sh  systm.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ios-ci.yml  python-ci.yml
daemon/: codex-usage-daemon.py  codex-usage-daemon.service
docs/: E2E_TESTING.md
firmware/: platformio.ini
firmware/src/: atom_main.cpp  ble.cpp  ble.h  boba_sprite.h  codex_app_icon.h  codex_icon.h  color_utils.h  data.h  font_mono_18.c  font_mono_32.c  font_styrene_12.c  font_styrene_14.c  font_styrene_16.c  font_styrene_20.c  font_styrene_24.c  font_styrene_28.c  font_styrene_48.c  font_tiempos_34.c  font_tiempos_56.c  gojo_sprite.h  itachi_sprite.h  main.cpp  pixel_art_screen.h  smoke.cpp  splash.cpp  splash_animations.h  sukuna_pet.h  sukuna_sprite.h  text_utils.h  theme.h  ui.cpp  usage_rate.h
ios/CodexMeterApp/: README.md  project.yml  update_widget.py
ios/CodexMeterApp/CodexMeterApp/: ContentView.swift  Info.plist
ios/CodexMeterApp/CodexMeterApp.xcodeproj/: Info.plist  project.pbxproj
ios/CodexMeterApp/CodexMeterAppWidget/: Info.plist  (+2 more)
tests/: test_ble_device_selection.py
tools/: README.md  check_mdns.sh  convert_to_c.js  pet_to_lvgl.py  scrape_codexpix.js  sprite_to_png.py
wiki/: API-Reference.md  Architecture.md  Home.md  Setup-Guide.md  Troubleshooting.md  _Sidebar.md
(+56 files in other folders)
