[project]
name = "codexmeter"
version = "0.1.0"
description = "CodexMeter ESP32-S3 desk display daemon"
requires-python = ">=3.10"
dependencies = [
    "bleak",
    "pyserial",
    "certifi",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.15", "black>=24.0"]

[tool.black]
target-version = ["py311"]
